dev-stack-manager: Updated the code so that the Docker API calls use the Docker socket rather than the insecure http port. Also made the Docker(-compose) files and VSCode configurations cleaner and moved management functionality in some shared bash scripts.

--- a/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
@@ -6,12 +6,29 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Debug Stack Client",
+            "name": "Debug",
             "request": "attach",
             "hostName": "localhost",
-            "port": "5006",
-            "preLaunchTask": "compose-deploy-dev",
-            "projectName": "stack-clients"
+            "port": "${config:debug.port}",
+            "preLaunchTask": "compose-deploy",
+            "projectName": "${workspaceFolderBasename}"
+        },
+        {
+            "type": "java",
+            "name": "Build and Debug",
+            "request": "attach",
+            "hostName": "localhost",
+            "port": "${config:debug.port}",
+            "preLaunchTask": "compose-build-deploy",
+            "projectName": "${workspaceFolderBasename}"
+        },
+        {
+            "type": "java",
+            "name": "Reattach and Debug",
+            "request": "attach",
+            "hostName": "localhost",
+            "port": "${config:debug.port}",
+            "projectName": "${workspaceFolderBasename}"
         }
     ]
 }
