--- a/Deploy/stacks/dynamic/stack-data-uploader/docker-compose-debug.yml
+++ b/Deploy/stacks/dynamic/stack-data-uploader/docker-compose-debug.yml
@@ -4,4 +4,4 @@ services:
     environment:
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005"
     ports:
-      - "5007:5005"
+      - "${DEBUG_PORT}:5005"
