134-dev-lab-equipment-digital-twin: also modified container_name for blazegraph/fileserver in all agent folders to avoid clashing with any other containers spawn up for other projects.

--- a/Agents/DoEAgent/docker-compose.test.yml
+++ b/Agents/DoEAgent/docker-compose.test.yml
@@ -19,7 +19,7 @@ services:
   # Blazegraph
   blazegraph:
     image: docker.cmclinnovations.com/blazegraph:1.0.0-SNAPSHOT
-    container_name: "blazegraph_test"
+    container_name: "blazegraph_doe_test"
     ports:
       - 27149:8080
     environment:
