--- a/Agents/VapourtecAgent/docker-compose.test.yml
+++ b/Agents/VapourtecAgent/docker-compose.test.yml
@@ -19,7 +19,7 @@ services:
   # Blazegraph
   blazegraph:
     image: docker.cmclinnovations.com/blazegraph:1.0.0-SNAPSHOT
-    container_name: "blazegraph_test"
+    container_name: "blazegraph_vapourtec_test"
     ports:
       - 48082:8080
     environment:
@@ -31,7 +31,7 @@ services:
   # File server
   fileserver:
     image: docker.cmclinnovations.com/fileserver:1.1.0-SNAPSHOT
-    container_name: "fileserver_test"
+    container_name: "fileserver_vapourtec_test"
     ports:
       - 48086:8080
     # Add secret to set BASIC authentication password
