dev-stack-manager: Added the "--update-snapshots" argument to the final mvn call in the stack projects' Dockerfiles to ensure changes to SNAPSHOT dependencies are always checked for.

--- a/Deploy/stacks/dynamic/stack-clients/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-clients/Dockerfile
@@ -27,7 +27,7 @@ COPY src ./src/
 # Ensure that the latest versions of SNAPSHOT dependencies are always used
 ARG CACHEBUST=1
 
-RUN mvn deploy -DskipTests
+RUN mvn deploy --update-snapshots -DskipTests
 
 #==================================================================================================
 
