--- a/JPS_ACCESS_AGENT/access-agent-dev-stack/docker-compose.yml
+++ b/JPS_ACCESS_AGENT/access-agent-dev-stack/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   # access-agent
   access-agent:
-    image: ghcr.io/cambridge-cares/access-agent:1.4.0-SNAPSHOT-5
+    image: ghcr.io/cambridge-cares/access-agent:1.4.0
     container_name: access-agent
     environment:
         LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
