dev-weather-agent-in-stack: retrieve endpoints via stack manager

--- a/Agents/WeatherAgent/pom.xml
+++ b/Agents/WeatherAgent/pom.xml
@@ -182,5 +182,12 @@
             <version>3.5.7</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- for interacting with the stack -->
+        <dependency>
+            <groupId>com.cmclinnovations</groupId>
+            <artifactId>stack-clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
