dev-stack-manager: Corrected issue in the stack-manager's compose file that prevented the stacks network form being created.

--- a/Deploy/stacks/dynamic/stack-manager/docker-compose-stack.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose-stack.yml
@@ -34,7 +34,7 @@ networks:
   stack:
     name: ${STACK_NAME}
     driver: overlay
-    external: true
+    attachable: true
 
 secrets:
   postgis_password:
