dev-stack-manager: Removing -SNAPSHOT from core stack Java packages and Docker images and bumping the version of the parent pom to 2.0.0.

--- a/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stack-manager:
-    image: docker.cmclinnovations.com/stack-manager:1.0-SNAPSHOT
+    image: docker.cmclinnovations.com/stack-manager:1.0
     volumes:
       - ./inputs/data:/inputs/data
       - ./inputs/config:/inputs/config
