--- a/Agents/HPLCAgent/agent.hplc.env.example
+++ b/Agents/HPLCAgent/agent.hplc.env.example
@@ -8,7 +8,8 @@ KG_PASSWORD=
 FILE_SERVER_ENDPOINT=http://localhost:48086/FileServer/
 FILE_SERVER_USERNAME=
 FILE_SERVER_PASSWORD=
-ONTOAGENT_OPERATION_HTTP_URL=/
+ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/HPLC
+REGISTER_AGENT=false
 
 HPLC_DIGITAL_TWIN=http://example.com/blazegraph/namespace/testlab/dummy_lab__CAM/HPLC_Dummy
 HPLC_REPORT_PERIODIC_TIMESCALE=5
