--- a/Agents/HPLCAgent/docker-compose.test.yml
+++ b/Agents/HPLCAgent/docker-compose.test.yml
@@ -12,6 +12,8 @@ services:
       labels:
         authors: "jb2197@cam.ac.uk"
         description: "Monitor the local report folder of the configured HPLC and upload the new reports to knowledge graph."
+    ports:
+      - 7000:5000
     extra_hosts:
       - localhost:host-gateway
     env_file:
