--- a/Agents/HPLCPostProAgent/docker-compose.test.yml
+++ b/Agents/HPLCPostProAgent/docker-compose.test.yml
@@ -9,8 +9,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    # ports:
-    #  - 7000:5000
+    ports:
+     - 7000:5000
     # NOTE below network_mode is to make the agent able to connect to localhost
     # which was required to download the file from file server
     # https://forums.docker.com/t/docker-errors-invalidargument-host-network-mode-is-incompatible-with-port-bindings/103492/11
