134-dev-lab-equipment-digital-twin: [VapourtecAgent] updated following pyderivationagent 1.1.0b0 release.

--- a/Agents/VapourtecAgent/docker-compose.test.yml
+++ b/Agents/VapourtecAgent/docker-compose.test.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    ports:
+      - 7000:5000
     extra_hosts: # NOTE this ensures FlowCommander to be reachable via "localhost"
       - localhost:host-gateway
     env_file:
