--- a/Agents/VapourtecAgent/agent.vapourtec.env.example
+++ b/Agents/VapourtecAgent/agent.vapourtec.env.example
@@ -8,7 +8,8 @@ KG_PASSWORD=
 FILE_SERVER_ENDPOINT=
 FILE_SERVER_USERNAME=
 FILE_SERVER_PASSWORD=
-ONTOAGENT_OPERATION_HTTP_URL=
+ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/Vapourtec
+REGISTER_AGENT=true
 
 VAPOURTEC_DIGITAL_TWIN=http://placeholder/vapourtec_digital_twin
 VAPOURTEC_STATE_PERIODIC_TIMESCALE=5
@@ -17,4 +18,3 @@ FCEXP_FILE_CONTAINER_FOLDER=/app/vapourtec
 FCEXP_FILE_HOST_FOLDER=D:\Vapourtec\FCEXP
 FCEXP_TEMPLATE_FILENAME=ReactionTemplate.fcexp
 DRY_RUN=false
-REGISTER_AGENT=true
