1376-dev-building-matching-agent: added ogm dependency

--- a/Agents/BuildingMatchingAgent/BuildingMatchingAgent/pom.xml
+++ b/Agents/BuildingMatchingAgent/BuildingMatchingAgent/pom.xml
@@ -45,6 +45,11 @@
       <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>uk.ac.cam.cares.ogm</groupId>
+      <artifactId>ogm</artifactId>
+      <version>1.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
