134-dev-lab-equipment-digital-twin: [VapourtecExecutionAgent] updated following pyderivationagent 1.1.0b0 release.

--- a/Agents/VapourtecExecutionAgent/agent.vtexe.env.example
+++ b/Agents/VapourtecExecutionAgent/agent.vtexe.env.example
@@ -8,7 +8,7 @@ KG_PASSWORD=
 FILE_SERVER_ENDPOINT=
 FILE_SERVER_USERNAME=
 FILE_SERVER_PASSWORD=
-ONTOAGENT_OPERATION_HTTP_URL=/Execution
+ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/Execution
+REGISTER_AGENT=false
 
 MAXIMUM_CONCURRENT_EXPERIMENT=1
-REGISTER_AGENT=false
