--- a/Agents/VapourtecExecutionAgent/requirements.txt
+++ b/Agents/VapourtecExecutionAgent/requirements.txt
@@ -1,10 +1,18 @@
+#######################################
+## The World Avatar related packages ##
+## TODO uncomment to stable releases ##
+#######################################
+# pyderivationagent
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
-git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digital-twin#subdirectory=Agents/utils/chemistry-and-robots
-pyderivationagent
-pandas
-pydantic
-xlwt
-testcontainers
-pytest
-pytest-docker-compose
-pytest-rerunfailures
+# git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digital-twin#subdirectory=Agents/utils/chemistry-and-robots
+
+##########################
+## Third-patry packages ##
+##########################
+pandas==1.3.5
+pydantic==1.9.0
+xlwt==1.3.0
+testcontainers==3.4.2
+pytest==6.2.5
+pytest-docker-compose==3.2.1
+pytest-rerunfailures==10.2
