134-dev-lab-equipment-digital-twin: [DoEAgent] updated following pyderivationagent 1.1.0b0 release.

--- a/Agents/DoEAgent/agent.doe.env.example
+++ b/Agents/DoEAgent/agent.doe.env.example
@@ -8,6 +8,6 @@ KG_PASSWORD=
 FILE_SERVER_ENDPOINT=
 FILE_SERVER_USERNAME=
 FILE_SERVER_PASSWORD=
-ONTOAGENT_OPERATION_HTTP_URL=/DoE
+ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/DoE
 
 REGISTER_AGENT=false
