--- a/Agents/FeatureInfoAgent/src/pom.xml
+++ b/Agents/FeatureInfoAgent/src/pom.xml
@@ -162,5 +162,12 @@
             <version>3.0.0</version>
         </dependency>
 
+         <!-- For interacting with TheStack -->
+         <dependency>
+            <groupId>com.cmclinnovations</groupId>
+            <artifactId>stack-clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
