--- a/Agents/VapourtecAgent/requirements.txt
+++ b/Agents/VapourtecAgent/requirements.txt
@@ -1,13 +1,12 @@
 #######################################
 ## The World Avatar related packages ##
-## TODO uncomment to stable releases ##
 #######################################
 pyderivationagent==1.1.0
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
-# git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digital-twin#subdirectory=Agents/utils/chemistry-and-robots
+chemistry_and_robots==1.0.0
 
 ##########################
-## Third-patry packages ##
+## Third-party packages ##
 ##########################
 pandas==1.3.5
 pydantic==1.9.0
