dev-feature-info-agent: Minor tweaks to get FeatureInfoAgent working for the CReDo v2 demo.

--- a/Agents/FeatureInfoAgent/docker-compose.yml
+++ b/Agents/FeatureInfoAgent/docker-compose.yml
@@ -10,6 +10,6 @@ services:
       PROPERTIES_FILE: "/root/feature-info.properties"
     ports:
       - "55050:8080" 
-    #configs:
-      #- blazegraph
-      #- ontop
+    configs:
+      - blazegraph
+      - ontop
