167-dev-vapourtec-agent-bind-dll-package: removed dll packages from docker image, instead, the dll packages will be provided at deployment and mounted into the docker container. All tests passed.

--- a/Agents/VapourtecAgent/docker-compose.test.yml
+++ b/Agents/VapourtecAgent/docker-compose.test.yml
@@ -14,6 +14,8 @@ services:
     env_file:
       - ./vapourtecagent/tests/agent.vapourtec.env.test
     volumes:
+      - ./FCRemote.dll:/app/FCRemote.dll
+      - ./FCRemoteCSV.dll:/app/FCRemoteCSV.dll
       - type: bind
         source: ./vapourtecagent/tests/_for_docker_integration_test
         target: /app/vapourtec
