--- a/Agents/HistoricalNUSDavisAgent/config/client.properties
+++ b/Agents/HistoricalNUSDavisAgent/config/client.properties
@@ -1,7 +1,7 @@
 # URL to connect to postgreSQL database
 #use when running locally 172.25.182.41:5433/NUSWeatheragent
-db.url=jdbc:postgresql://137.132.22.161:5433/NUSWeatheragent
-#db.url=jdbc:postgresql://host.docker.internal:5432/davis
+#db.url=jdbc:postgresql://137.132.22.161:5433/NUSWeatheragent
+db.url=jdbc:postgresql://host.docker.internal:5432/davistest
 # Username and password will be read from the credentials when creating the image. Do not change!
 # Username to connect to postgreSQL database
 db.user=postgres
@@ -9,7 +9,7 @@ db.user=postgres
 db.password=postgres
 #SPARQL Query endpoint of triple store
 #use when running locally http://www.theworldavatar.com/blazegraph/namespace/nusDavisWeatherStation/sparql
-sparql.query.endpoint=http://www.theworldavatar.com/blazegraph/namespace/nusDavisWeatherStation/sparql
+sparql.query.endpoint=http://host.docker.internal:9999/blazegraph/namespace/nusDavisWeatherStation/sparql
 #SPARQL Update endpoint of triple store
 #use when running locally
-sparql.update.endpoint=http://www.theworldavatar.com/blazegraph/namespace/nusDavisWeatherStation/sparql
+sparql.update.endpoint=http://host.docker.internal:9999/blazegraph/namespace/nusDavisWeatherStation/sparql
