--- a/Deploy/stacks/dynamic/stack-data-uploader/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-data-uploader/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stack-data-uploader:
-    image: docker.cmclinnovations.com/stack-data-uploader:1.1
+    image: docker.cmclinnovations.com/stack-data-uploader:1.2.0-286-SNAPSHOT
     configs:
       - postgis
       - geoserver
