281-make-it-easier-to-spin-up-multiple-stacks: Bumped the version numbers of the dynamic stack projects and added -SNAPSHOT qualifiers.

--- a/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stack-manager:
-    image: docker.cmclinnovations.com/stack-manager:1.2.0
+    image: docker.cmclinnovations.com/stack-manager:1.3.0-281-SNAPSHOT
     volumes:
       - ./inputs/data:/inputs/data
       - ./inputs/config:/inputs/config
