281-make-it-easier-to-spin-up-multiple-stacks: Updated the docker-compose file for the stack-manager container, the common scripts and the VSCode tasks to support the "EXTERNAL_PORT" argument and change the debug port to a named argument.

--- a/Deploy/stacks/dynamic/stack-clients/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/tasks.json
@@ -19,26 +19,16 @@
         {
             "type": "shell",
             "label": "compose-deploy-internal",
-            "command": "bash",
+            "command": "./stack.sh",
             "args": [
-                "-c",
-                "./stack.sh start ${input:stackName} ${config:debug.port}"
-            ]
-        },
-        {
-            "type": "shell",
-            "label": "compose-build-deploy",
-            "command": "sleep 1",
-            "dependsOn": [
-                "compose-build",
-                "compose-deploy-internal"
+                "start",
+                "${input:stackName}",
+                "--debug-port",
+                "${config:debug.port}"
             ],
-            "dependsOrder": "sequence",
-            "windows": {
-                "options": {
-                    "shell": {
-                        "executable": "powershell"
-                    }
+            "options": {
+                "shell": {
+                    "executable": "bash"
                 }
             }
         },
@@ -56,6 +46,15 @@
                     }
                 }
             }
+        },
+        {
+            "type": "shell",
+            "label": "compose-build-deploy",
+            "dependsOn": [
+                "compose-build",
+                "compose-deploy"
+            ],
+            "dependsOrder": "sequence"
         }
     ],
     "inputs": [
