--- a/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
@@ -19,26 +19,17 @@
         {
             "type": "shell",
             "label": "compose-deploy-internal",
-            "command": "bash",
+            "command": "./stack.sh",
             "args": [
-                "-c",
-                "./stack.sh start ${input:stackName} ${config:debug.port}"
-            ]
-        },
-        {
-            "type": "shell",
-            "label": "compose-build-deploy",
-            "command": "sleep 1",
-            "dependsOn": [
-                "compose-build",
-                "compose-deploy-internal"
+                "start",
+                "${input:stackName}",
+                "${input:external.port}",
+                "--debug-port",
+                "${config:debug.port}"
             ],
-            "dependsOrder": "sequence",
-            "windows": {
                 "options": {
                     "shell": {
-                        "executable": "powershell"
-                    }
+                    "executable": "bash"
                 }
             }
         },
@@ -56,6 +47,15 @@
                     }
                 }
             }
+        },
+        {
+            "type": "shell",
+            "label": "compose-build-deploy",
+            "dependsOn": [
+                "compose-build",
+                "compose-deploy"
+            ],
+            "dependsOrder": "sequence"
         }
     ],
     "inputs": [
@@ -64,6 +64,12 @@
             "type": "promptString",
             "description": "Name your stack.",
             "default": "TEST-STACK"
+        },
+        {
+            "id": "external.port",
+            "type": "promptString",
+            "description": "External port number.",
+            "default": "3838"
         }
     ]
 }
