--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
@@ -39,50 +39,50 @@ location /cdn/ {
 
 
 #======================== Temporary redirects for CReDo v2 demo =========================
-location = /credo/demo/all {
-    return 301 $scheme://$http_host$uri/;
-}
-location /credo/demo/all/ {
-    proxy_pass                  http://local_credo-v2-all/;
-    proxy_set_header            Host $http_host;
-    proxy_set_header            X-Real-IP $remote_addr;
-    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header            X-Forwarded-Host $http_host;
-    proxy_set_header            X-Forwarded-Server $http_host;
-}
-location = /credo/demo/aw {
-    return 301 $scheme://$http_host$uri/;
-}
-location /credo/demo/aw/ {
-    proxy_pass                  http://local_credo-v2-aw/;
-    proxy_set_header            Host $http_host;
-    proxy_set_header            X-Real-IP $remote_addr;
-    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header            X-Forwarded-Host $http_host;
-    proxy_set_header            X-Forwarded-Server $http_host;
-}
-location = /credo/demo/bt {
-    return 301 $scheme://$http_host$uri/;
-}
-location /credo/demo/bt/ {
-    proxy_pass                  http://local_credo-v2-bt/;
-    proxy_set_header            Host $http_host;
-    proxy_set_header            X-Real-IP $remote_addr;
-    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header            X-Forwarded-Host $http_host;
-    proxy_set_header            X-Forwarded-Server $http_host;
-}
-location = /credo/demo/ukpn {
-    return 301 $scheme://$http_host$uri/;
-}
-location /credo/demo/ukpn/ {
-    proxy_pass                  http://local_credo-v2-ukpn/;
-    proxy_set_header            Host $http_host;
-    proxy_set_header            X-Real-IP $remote_addr;
-    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header            X-Forwarded-Host $http_host;
-    proxy_set_header            X-Forwarded-Server $http_host;
-}
+#location = /credo/demo/all {
+#    return 301 $scheme://$http_host$uri/;
+#}
+#location /credo/demo/all/ {
+#    proxy_pass                  http://local_credo-v2-all/;
+#    proxy_set_header            Host $http_host;
+#    proxy_set_header            X-Real-IP $remote_addr;
+#    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+#    proxy_set_header            X-Forwarded-Host $http_host;
+#    proxy_set_header            X-Forwarded-Server $http_host;
+#}
+#location = /credo/demo/aw {
+#    return 301 $scheme://$http_host$uri/;
+#}
+#location /credo/demo/aw/ {
+#    proxy_pass                  http://local_credo-v2-aw/;
+#    proxy_set_header            Host $http_host;
+#    proxy_set_header            X-Real-IP $remote_addr;
+#    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+#    proxy_set_header            X-Forwarded-Host $http_host;
+#    proxy_set_header            X-Forwarded-Server $http_host;
+#}
+#location = /credo/demo/bt {
+#    return 301 $scheme://$http_host$uri/;
+#}
+#location /credo/demo/bt/ {
+#    proxy_pass                  http://local_credo-v2-bt/;
+#    proxy_set_header            Host $http_host;
+#    proxy_set_header            X-Real-IP $remote_addr;
+#    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+#    proxy_set_header            X-Forwarded-Host $http_host;
+#    proxy_set_header            X-Forwarded-Server $http_host;
+#}
+#location = /credo/demo/ukpn {
+#    return 301 $scheme://$http_host$uri/;
+#}
+#location /credo/demo/ukpn/ {
+#    proxy_pass                  http://local_credo-v2-ukpn/;
+#    proxy_set_header            Host $http_host;
+#    proxy_set_header            X-Real-IP $remote_addr;
+#    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+#    proxy_set_header            X-Forwarded-Host $http_host;
+#    proxy_set_header            X-Forwarded-Server $http_host;
+#}
 
 location = /credo/demo/stack/aw {
     return 301 $scheme://$http_host$uri/;
