--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
@@ -88,21 +88,21 @@ upstream prod_web_portainer {
 
 # ============================= Temporary demos for CReDo v2 =============================
 
-#upstream local_credo-v2-all {
-#    server credo-v2-all:80;
-#}
+upstream local_credo-v2-all {
+    server credo-v2-all:80;
+}
 
-#upstream local_credo-v2-aw {
-#    server credo-v2-aw:80;
-#}
+upstream local_credo-v2-aw {
+    server credo-v2-aw:80;
+}
 
-#upstream local_credo-v2-bt {
-#    server credo-v2-bt:80;
-#}
+upstream local_credo-v2-bt {
+    server credo-v2-bt:80;
+}
 
-#upstream local_credo-v2-ukpn {
-#    server credo-v2-ukpn:80;
-#}
+upstream local_credo-v2-ukpn {
+    server credo-v2-ukpn:80;
+}
 
 upstream agent_credo-v2-stack-aw {
     server 192.168.1.177:3839;
