--- a/Agents/RxnOptGoalAgent/requirements.txt
+++ b/Agents/RxnOptGoalAgent/requirements.txt
@@ -1,9 +1,17 @@
+#######################################
+## The World Avatar related packages ##
+#######################################
+pyderivationagent==1.1.0
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
-git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digital-twin#subdirectory=Agents/utils/chemistry-and-robots
-pyderivationagent
-pandas
-pydantic
-testcontainers
-pytest
-pytest-docker-compose
-pytest-rerunfailures
+chemistry_and_robots==1.0.0
+
+##########################
+## Third-party packages ##
+##########################
+pandas==1.3.5
+pydantic==1.9.0
+xlwt==1.3.0
+testcontainers==3.4.2
+pytest==6.2.5
+pytest-docker-compose==3.2.1
+pytest-rerunfailures==10.2
