--- a/Agents/VapourtecAgent/.gitignore
+++ b/Agents/VapourtecAgent/.gitignore
@@ -13,7 +13,9 @@ dist/
 .vscode/
 
 # Miscellaneous files/folders:
+.pytest_cache
 *.env
+
 # FlowCommander related files
 FCRemote.dll
 FCRemoteCSV.dll
