281-make-it-easier-to-spin-up-multiple-stacks: Updated the VSCode tasks for the stack-manager so that it provides a list of free ports for the user to choose from for the external port when starting a stack up. This requires a specific extension, which has been added to the recommended list.

--- a/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
@@ -67,9 +67,12 @@
         },
         {
             "id": "external.port",
-            "type": "promptString",
-            "description": "External port number.",
-            "default": "3838"
+            "type": "command",
+            // always require selection
+            "command": "shellCommand.execute",
+            "args": {
+                "command": "bash ./stack.sh ports 5 3838 4000"
+            }
         }
     ]
 }
