dev-weather-agent-in-stack: updated mapping to use GeoSPARQL properly, also use jena to parse geo:wktLiteral properly

--- a/Agents/WeatherAgent/pom.xml
+++ b/Agents/WeatherAgent/pom.xml
@@ -182,5 +182,12 @@
             <version>3.5.7</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-geosparql -->
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-geosparql</artifactId>
+            <version>4.5.0</version>
+        </dependency>
     </dependencies>
 </project>
