dev-weather-agent-in-stack: updated comment on jena geosparql library

--- a/Agents/WeatherAgent/pom.xml
+++ b/Agents/WeatherAgent/pom.xml
@@ -183,7 +183,7 @@
             <scope>test</scope>
         </dependency>
         
-        <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-geosparql -->
+        <!-- used to parse geosparql wkt literal -->
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-geosparql</artifactId>
