--- a/Agents/FloodAgent/pom.xml
+++ b/Agents/FloodAgent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     
     <!-- Profiles are used to switch between building for development and production 
