dev-feature-info-agent: Added references to the postgis Docker Config and Secret files in the docker-compose files.

--- a/Agents/FeatureInfoAgent/docker-compose-stack.yml
+++ b/Agents/FeatureInfoAgent/docker-compose-stack.yml
@@ -29,6 +29,14 @@ configs:
   ontop:
     name: ${STACK_NAME}_ontop
     external: true
+  postgis:
+    name: ${STACK_NAME}_postgis
+    external: true
+
+secrets:
+  postgis_password:
+    name: ${STACK_NAME}_postgis_password
+    external: true
 
 networks:
   stack:
