--- a/Deploy/stacks/dynamic/stack-clients/pom.xml
+++ b/Deploy/stacks/dynamic/stack-clients/pom.xml
@@ -68,6 +68,19 @@
       <groupId>it.unibz.inf.ontop</groupId>
       <artifactId>ontop-system-sql-owlapi</artifactId>
       <version>4.2.1</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>jgrapht-core</artifactId>
+          <groupId>org.javabits.jgrapht</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <!-- used in the DerivationClient to detect circular dependencies -->
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-core</artifactId>
+      <version>1.5.1</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
