--- a/Agents/FloodAgent/docker-compose.yml
+++ b/Agents/FloodAgent/docker-compose.yml
@@ -21,3 +21,8 @@ services:
     volumes:
       - ./datum.json:/datum.json
       - ./river_stations.csv:/river_stations.csv
+      - logs:/root/.jps
+
+volumes:
+  logs:
+    name: "logs"
